--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestão Inteligente</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+    <div class="cabecalho">
+        <a href="#home">Home</a>
+        <a href="#about">Sobre</a>
+        <a href="#services">Serviços</a>
+        <a href="#contact">Contato</a>
+    </div>
+    <div class="content">
+        <h2>Conteúdo da Página</h2>
+        <p>Esta é a área onde o conteúdo da sua página será exibido.</p>
+    </div>
+    <footer>
+        <div class="rodape">
+            <p>2024 Melhores Roupas de Time. Todos os direitos reservados.</p>
+            <p>
+                <a href="https://www.facebook.com/melhoresroupas" style="color:#fff; margin: 0 10px;">Facebook</a> |
+                <a href="https://www.instagram.com/melhoresroupas" style="color:#fff; margin: 0 10px;">Instagram</a> |
+                <a href="https://www.twitter.com/melhoresroupas" style="color:#fff; margin: 0 10px;">Twitter</a>
+            </p>
+            <p>Entre em contato: contato@melhoresroupas.com | +55 (21) 1234-5678</p>
+        </div>
+    </footer>
 </body>
 </html>
