--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
     <div class="cabecalho">
-        <a href="#home">Home</a>
-        <a href="#about">Sobre</a>
-        <a href="#services">Serviços</a>
-        <a href="#contact">Contato</a>
+        <img class="logo" src="img/logo.jpg" alt="">
+        <a href="#lojas">Lojas</a>
+        <a href="#feiroes">Feirões</a>
+        <a href="#planos">Planos</a>
+        <a href="#sobre-nos">Sobre Nós</a>
     </div>
-    <div class="content">
+    <div class="conteudo">
         <h2>Conteúdo da Página</h2>
         <p>Esta é a área onde o conteúdo da sua página será exibido.</p>
+        <p>Lorem ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit neque quas quasi maxime expedita, quae earum, eum culpa ex fugit totam aspernatur, odit ipsa a ea iusto itaque harum enim.loremdolor sit, amet consectetur adipisicing elit. Enim modi sapiente sequi similique nesciunt ipsum iure quidem nam laborum quisquam eos, commodi eum culpa dolores quo itaque, mollitia explicabo ratione?</p>        
     </div>
     <footer>
         <div class="rodape">
