--- a/lojas.html
+++ b/lojas.html
@@ -1,31 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestão Inteligente</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="cabecalho">
-        <img class="logo" src="img/logo.jpg" alt="">
+        <a href="index.html"><img class="logo" src="img/logo.jpg" alt=""></a>
         <a href="lojas.html">Lojas</a>
         <a href="#feiroes">Feirões</a>
         <a href="#planos">Planos</a>
         <a href="#sobre-nos">Sobre Nós</a>
     </div>
-
-    <img src="img/bgpagini.webp" alt="">
-    <div class="sobinicial">
-        <h1>Encontre a Loja Perfeita para Você</h1>
-        <h3>Explore nosso site e confira nosso catalogo de Lojas!</h3>
+    <div class="conteudo">
+        <h2>Conteúdo da Página</h2>
+        <p>Esta é a área onde o conteúdo da sua página será exibido.</p>
+        <p>Lorem ipsum Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit neque quas quasi maxime expedita, quae earum, eum culpa ex fugit totam aspernatur, odit ipsa a ea iusto itaque harum enim.loremdolor sit, amet consectetur adipisicing elit. Enim modi sapiente sequi similique nesciunt ipsum iure quidem nam laborum quisquam eos, commodi eum culpa dolores quo itaque, mollitia explicabo ratione?</p>        
     </div>
-    
-    <div class="buttoninicial">
-        <a>Confira</a>
-    </div>
-
     <footer>
         <div class="rodape">
             <p>2024 Gestão Inteligente. Todos os direitos reservados.</p>
@@ -36,6 +29,5 @@
             <p>Entre em contato: yago.diasoliveira16@gmail.com</p>
         </div>
     </footer>
-
 </body>
 </html>
